--- a/katalog.html
+++ b/katalog.html
@@ -11,16 +11,7 @@
 
 <div class="grid_wrapper">
     <header>header</header>
-    <nav>
-        <ul class="meny_list">
-            <li><a href="katalog.html">Katalog</a></li>
-
-            <li><a href="kundservice.html">kundservice</a></li>
-
-            <li><a href="om_oss.html">om oss</a></li>
-
-        </ul>
-    </nav>
+    <nav>nav</nav>
     <main>main</main>
 
     <footer>footer</footer>
