--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <header>header</header>
     <nav>
         <ul class="meny_list">
-            <li><a href="katalog.html">Katalog</a></li>
+            <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
 
-            <li><a href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
 
         </ul>
+
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
     <main>main</main>
 
@@ -27,6 +33,8 @@
 
 </div>
 
+
+<script src="js/script.js"></script>
 
 </body>
 </html>
