--- a/om_oss.html
+++ b/om_oss.html
@@ -11,7 +11,22 @@
 
 <div class="grid_wrapper">
     <header>header</header>
-    <nav>nav</nav>
+    <nav>
+        <ul class="meny_list">
+            <li><a class="meny_item" href="katalog.html">Katalog</a></li>
+
+            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+
+            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+
+        </ul>
+
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
     <main>main</main>
 
     <footer>footer</footer>
