--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main>main</main>
+    <main >
+        <div class="inner_grid">
+            <section id="nyheter">nyheter
+                <div class="nya_produkter">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </section>
+            <section id="erbjudanden">erbjudanden</section>
+        </div>
+    </main>
 
     <footer>footer</footer>
 
