--- a/katalog.html
+++ b/katalog.html
@@ -27,12 +27,13 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main>main</main>
+    <main class="inner_grid">
+        
+        <section id="nyheter">nyheter</section>
+        <section id="erbjudanden">erbjudanden</section>
+
+    </main>
 
     <footer>footer</footer>
 
 </div>
-
-
-</body>
-</html>
