--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="grid_wrapper">
-    <header>header</header>
+    <header><a href="index.html">header</a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
@@ -28,16 +28,23 @@
         </div>
     </nav>
     <main >
-        <div class="inner_grid">
+        <div class="inner_grid_index">
             <section id="nyheter">nyheter
                 <div class="nya_produkter">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
                 </div>
             </section>
-            <section id="erbjudanden">erbjudanden</section>
+            <section id="erbjudanden">erbjudanden
+                <div class="nya_produkter">
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                </div>
+            </section>
         </div>
     </main>
 
