--- a/om_oss.html
+++ b/om_oss.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="grid_wrapper">
-    <header>header</header>
+    <header><a href="index.html">header</a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
@@ -27,13 +27,32 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main class="inner_grid">
-        
-        <section id="nyheter">nyheter</section>
-        <section id="erbjudanden">erbjudanden</section>
-
+    <main >
+        <div class="inner_grid">
+            <section id="nyheter">nyheter
+                <div class="nya_produkter">
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                </div>
+            </section>
+            <section id="erbjudanden">erbjudanden
+                <div class="nya_produkter">
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                    <div id="ny_produkt_bild">bild</div>
+                </div>
+            </section>
+        </div>
     </main>
 
     <footer>footer</footer>
 
 </div>
+
+<script src="js/script.js"></script>
+
+</body>
+</html>
