--- a/kundservice.html
+++ b/kundservice.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="grid_wrapper">
-    <header>header</header>
+    <header><a href="index.html">header</a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
@@ -27,13 +27,20 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main class="inner_grid">
-        
-        <section id="nyheter">nyheter</section>
-        <section id="erbjudanden">erbjudanden</section>
-
+    <main >
+        <div class="inner_grid_kundservice">
+            <section id="leverans">Leverans</section>
+            <section id="returnera">Returnera</section>
+            <section id="villkor">Villkor</section>
+            <section id="kontakta_oss">Kontakta oss</section>
+        </div>
     </main>
 
     <footer>footer</footer>
 
 </div>
+
+<script src="js/script.js"></script>
+
+</body>
+</html>
