--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main >
+    <main>
         <div class="inner_grid_index">
             <section id="nyheter">nyheter
                 <div class="nya_produkter">
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
                 </div>
             </section>
             <section id="erbjudanden">erbjudanden
                 <div class="nya_produkter">
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
+                    <div class="ny_produkt_bild">bild</div>
                 </div>
             </section>
         </div>
