--- a/kök.html
+++ b/kök.html
@@ -29,9 +29,15 @@
     </nav>
     <main >
         <div class="inner_grid_produkter">
-            <section class="produkt_1">skooba</section>
-            <section class="produkt_2">dooba</section>
-            <section class="produkt_3">booba</section>
+            <section class="produkt_1">skooba
+                <img src="img/Kök_produkt.jfif" alt="">
+            </section>
+            <section class="produkt_2">dooba
+                <img src="img/Kök_produkt_2.jfif" alt="">
+            </section>
+            <section class="produkt_3">booba
+                <img src="img/kök_produkt_3.jfif" alt="">
+            </section>
         </div>
     </main>
 
