--- a/vardagsrum.html
+++ b/vardagsrum.html
@@ -30,9 +30,15 @@
     <main>
         <div class="inner_grid">
             <div class="inner_grid_produkter">
-                <section class="produkt_1">skooba</section>
-                <section class="produkt_2">dooba</section>
-                <section class="produkt_3">booba</section>
+                <section class="produkt_1">skooba
+                    <img src="img/vardagsrum_produkt_soffa.jfif" alt="">
+                </section>
+                <section class="produkt_2">dooba
+                    <img src="img/vardagsrum_produkt_soffa_2.jfif" alt="">
+                </section>
+                <section class="produkt_3">booba
+                    <img src="img/vardagsrum_produkt_soffa_3.jfif" alt="">
+                </section>
             </div>
         </div>
     </main>
