bilder, desktop, mått

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="grid_wrapper">
-    <header><a href="index.html">header</a></header>
+    <header><a href="index.html"><img src="img/logo.png" alt=""></a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">Kundservice</a></li>
 
-            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">Om oss</a></li>
 
         </ul>
 
@@ -29,26 +29,46 @@
     </nav>
     <main>
         <div class="inner_grid_index">
-            <section id="nyheter">nyheter
-                <div class="nya_produkter">
-                    <div class="ny_produkt_bild">bild</div>
-                    <div class="ny_produkt_bild">bild</div>
-                    <div class="ny_produkt_bild">bild</div>
-                    <div class="ny_produkt_bild">bild</div>
+            <article id="info_index"><h2>Välkommen</h2><p>Laque erbjuder högsta kvaliten av möbler. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda ipsa praesentium magnam quisquam cupiditate quam eaque explicabo necessitatibus porro vero aliquam blanditiis veritatis molestiae sit temporibus, iusto beatae dicta.</p></article>
+            <section id="nyheter"><h2>Nyheter</h2>
+                <div class="produkter_index">
+                    <div class="produkt_index_bild_1"><img src="img/ny_produkt_1.jpg" alt="En röd sofa med en gul kudde på den"></div>
+                    <div class="produkt_index_bild_2"><img src="img/ny_produkt_2.jpg" alt="Orange fåtölj"></div>
+                    <div class="produkt_index_bild_3"><img src="img/ny_produkt_3.jpg" alt="En vit rum med en röd fåtölj och trä bord med några andra möbler i bakgrunden"></div>
+                    <div class="produkt_index_bild_4"><img src="img/ny_produkt_4.jpg" alt="En vit byrå med en kaktus ovanför"></div>
                 </div>
             </section>
-            <section id="erbjudanden">erbjudanden
-                <div class="nya_produkter">
-                    <div class="ny_produkt_bild">bild</div>
-                    <div class="ny_produkt_bild">bild</div>
-                    <div class="ny_produkt_bild">bild</div>
-                    <div class="ny_produkt_bild">bild</div>
+            <section id="erbjudanden"><h2>Erbjudanden</h2>
+                <div class="produkter_index">
+                    <div class="produkt_index_bild_1"><img src="img/erbjudande_1.jpg" alt="En vit säng med kuddar på och en liten byrå med en lampa ovanför"></div>
+                    <div class="produkt_index_bild_2"><img src="img/erbjudande_2.jpg" alt="En grå soffa med vita kuddar, en byrå och en liten glasbord men en lampa ovanför"></div>
+                    <div class="produkt_index_bild_3"><img src="img/erbjudande_3.jpg" alt="En brun soffa med kuddar på med en glasbord framför"></div>
+                    <div class="produkt_index_bild_4"><img src="img/erbjudande_4.jpg" alt="En mörkbrun soffa med kuddar och en glasbord framför"></div>
                 </div>
             </section>
         </div>
     </main>
 
-    <footer>footer</footer>
+    <footer>
+        <ul class="footer_list">
+           <li><a class="footer_item" href="">Kontakta oss</a></li>
+           <li><a class="footer_item" href="">Retur</a></li>
+           <li><a class="footer_item" href="">Leverans</a></li> 
+        </ul>
+
+        <ul class="footer_list">
+            <li><a class="footer_item" href="om_oss.html">Om oss</a></li>
+            <li><a class="footer_item" href="">Butiker</a></li>
+            <li><a class="footer_item" href="">COVID-19</a></li>
+        </ul>
+        
+        <ul class="footer_list">
+            <li><a class="footer_item" href="">Instagram</a></li>
+            <li><a class="footer_item" href="">Twitter</a></li>
+            <li><a class="footer_item" href="">Youtube</a></li>
+        </ul>
+
+    </footer>
 
 </div>
 
