--- a/katalog.html
+++ b/katalog.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="grid_wrapper">
-    <header><a href="index.html">header</a></header>
+    <header><a href="index.html"><img src="img/logo.png" alt=""></a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">Kundservice</a></li>
 
-            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">Om oss</a></li>
 
         </ul>
 
@@ -31,16 +31,34 @@
         <div class="inner_grid_katalog">
 
             <section id="vardagsrum">
-                <a href="vardagsrum.html">Vardagsrum <img src="img/vardagsrum_meny.jfif" alt=""></a>
+                <a href="vardagsrum.html"><h2>Vardagsrum</h2><img src="img/vardagsrum_meny.jpg" alt="En trä bord i mitten med två vit, bruna soffor, en åt vänster och en åt höger"></a>
             </section>
             <section id="kok">
-                <a href="kök.html">Kök<img src="img/kök_meny_bild.jfif" alt=""></a>
+                <a href="kök.html"><h2>Kök</h2><img src="img/kök_meny_bild.jpg" alt="En diskbänk och en bord framför med en spis och andra köksredskap"></a>
             </section>
 
         </div>
     </main>
 
-    <footer>footer</footer>
+    <footer>
+        <ul class="footer_list">
+            <li><a class="footer_item" href="">Kontakta oss</a></li>
+            <li><a class="footer_item" href="">Retur</a></li>
+            <li><a class="footer_item" href="">Leverans</a></li> 
+         </ul>
+ 
+         <ul class="footer_list">
+             <li ><a class="footer_item"href="om_oss.html">Om oss</a></li>
+             <li><a class="footer_item" href="">Butiker</a></li>
+             <li><a class="footer_item" href="">COVID-19</a></li>
+         </ul>
+         
+         <ul class="footer_list">
+             <li><a class="footer_item" href="">Instagram</a></li>
+             <li><a class="footer_item" href="">Twitter</a></li>
+             <li><a class="footer_item" href="">Youtube</a></li>
+         </ul>
+    </footer>
 
 </div>
 
