--- a/kundservice.html
+++ b/kundservice.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="grid_wrapper">
-    <header><a href="index.html">header</a></header>
+    <header><a href="index.html"><img src="img/logo.png" alt=""></a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">Kundservice</a></li>
 
-            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">Om oss</a></li>
 
         </ul>
 
@@ -29,14 +29,32 @@
     </nav>
     <main >
         <div class="inner_grid_kundservice">
-            <section id="leverans">Leverans</section>
-            <section id="returnera">Returnera</section>
-            <section id="villkor">Villkor</section>
-            <section id="kontakta_oss">Kontakta oss</section>
+            <section id="leverans"><h2>Leverans</h2><img src="img/leverans_bild.jpg" alt="En kartong låda utanför en dörr"></section>
+            <section id="returnera"><h2>Returnera</h2><img src="img/returnera_bild.jpg" alt="En låda som är insvept av plast med texten fragile på"></section>
+            <section id="villkor"><h2>Villkor</h2><img src="img/villkor.jpg" alt="En hand som skriver på en kontrakt"></section>
+            <section id="kontakta_oss"><h2>Kontakta oss</h2><img src="img/kontakta_oss.jpg" alt="En gammeldags telefon"></section>
         </div>
     </main>
 
-    <footer>footer</footer>
+    <footer>
+        <ul class="footer_list">
+            <li><a class="footer_item" href="">Kontakta oss</a></li>
+            <li><a class="footer_item" href="">Retur</a></li>
+            <li><a class="footer_item" href="">Leverans</a></li> 
+         </ul>
+ 
+         <ul class="footer_list">
+             <li ><a class="footer_item"href="om_oss.html">Om oss</a></li>
+             <li><a class="footer_item" href="">Butiker</a></li>
+             <li><a class="footer_item" href="">COVID-19</a></li>
+         </ul>
+         
+         <ul class="footer_list">
+             <li><a class="footer_item" href="">Instagram</a></li>
+             <li><a class="footer_item" href="">Twitter</a></li>
+             <li><a class="footer_item" href="">Youtube</a></li>
+         </ul>
+    </footer>
 
 </div>
 
