--- a/kök.html
+++ b/kök.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="grid_wrapper">
-    <header><a href="index.html">header</a></header>
+    <header><a href="index.html"><img src="img/logo.png" alt=""></a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">Kundservice</a></li>
 
-            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">Om oss</a></li>
 
         </ul>
 
@@ -29,19 +29,37 @@
     </nav>
     <main >
         <div class="inner_grid_produkter">
-            <section class="produkt_1">skooba
-                <img src="img/Kök_produkt.jfif" alt="">
+            <section class="produkt_1"><h2>Produkt 1</h2>
+                <img src="img/Kök_produkt.jpg" alt="En diskbänk åt vänster med två ungnar i mitten och ett bord åt höger">
             </section>
-            <section class="produkt_2">dooba
-                <img src="img/Kök_produkt_2.jfif" alt="">
+            <section class="produkt_2"><h2>Produkt 2</h2>
+                <img src="img/Kök_produkt_2.jpg" alt="En hylla för köksredskap eller tallrikar">
             </section>
-            <section class="produkt_3">booba
-                <img src="img/kök_produkt_3.jfif" alt="">
+            <section class="produkt_3"><h2>Produkt 3</h2>
+                <img src="img/kök_produkt_3.jpg" alt="Ett bord med svart stolar runtom">
             </section>
         </div>
     </main>
 
-    <footer>footer</footer>
+    <footer>
+        <ul class="footer_list">
+            <li><a class="footer_item" href="">Kontakta oss</a></li>
+            <li><a class="footer_item" href="">Retur</a></li>
+            <li><a class="footer_item" href="">Leverans</a></li> 
+         </ul>
+ 
+         <ul class="footer_list">
+             <li ><a class="footer_item"href="om_oss.html">Om oss</a></li>
+             <li><a class="footer_item" href="">Butiker</a></li>
+             <li><a class="footer_item" href="">COVID-19</a></li>
+         </ul>
+         
+         <ul class="footer_list">
+             <li><a class="footer_item" href="">Instagram</a></li>
+             <li><a class="footer_item" href="">Twitter</a></li>
+             <li><a class="footer_item" href="">Youtube</a></li>
+         </ul>
+    </footer>
 
 </div>
 
