--- a/om_oss.html
+++ b/om_oss.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="grid_wrapper">
-    <header><a href="index.html">header</a></header>
+    <header><a href="index.html"><img src="img/logo.png" alt=""></a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">Kundservice</a></li>
 
-            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">Om oss</a></li>
 
         </ul>
 
@@ -27,28 +27,35 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main >
-        <div class="inner_grid">
-            <section id="nyheter">nyheter
-                <div class="nya_produkter">
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                </div>
-            </section>
-            <section id="erbjudanden">erbjudanden
-                <div class="nya_produkter">
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                    <div id="ny_produkt_bild">bild</div>
-                </div>
-            </section>
+    <main>
+        <div class="om_oss_grid">
+            <div class="historia"><img src="img/historia_bild.jpg" alt="En svart vit bild av en person som hänger upp något framför en affär "></div>
+            <div class="vora_produkter"><img src="img/våra_produkter.jpg" alt="Tre trä byrån"></div>
+            <article class="historia_text"><h2>Vår historia</h2><p>Ken Phu grundade Laque 2021 när han var 18 år, Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolorum quisquam aperiam? Voluptates unde nobis culpa eius praesentium minus? Ipsum dolores similique obcaecati consequatur quae iure cum beatae, modi labore sed? Et incidunt, exercitationem illum debitis culpa quo nemo laborum ducimus possimus iure pariatur aut expedita error accusantium commodi suscipit voluptas nihil necessitatibus doloremque odit obcaecati! Eius aspernatur animi voluptates reprehenderit eaque libero, explicabo modi, delectus dolorum numquam error perferendis neque incidunt voluptatum minus illo maxime impedit? Deleniti, repudiandae sapiente, esse officiis eius fugit dolore cum maiores nisi placeat quo minus explicabo nemo dolores porro temporibus eveniet nesciunt nulla modi asperiores delectus obcaecati quis laboriosam tenetur. Sed, sint ex! Doloribus, amet nihil? Esse voluptatem culpa nulla atque fugit vel, voluptatum ipsum sint at corrupti aspernatur a recusandae ut dolor quod non nobis, obcaecati numquam architecto vitae odit. Illo eligendi sint, officia similique sequi iusto explicabo dignissimos nobis soluta, id voluptatum!</p> </article>
+            <article class="vora_produkter_text"><h2>Våra produkter</h2><p>Produkter från Laque produceras med den högsta kvaliten. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex obcaecati, eius suscipit repudiandae nesciunt aliquid sed animi ratione nihil quam cum dicta quod voluptate quo praesentium excepturi voluptas pariatur sit magni perspiciatis officia laboriosam! Accusamus quo sequi inventore quisquam porro eveniet consequatur asperiores atque nihil sunt expedita quae commodi, libero illum repellat perspiciatis impedit unde modi repellendus rerum perferendis sapiente? Praesentium saepe, nam repellat quos fugit sint, vel iste incidunt nostrum perferendis corrupti dolorem tempore at in ducimus consectetur voluptatibus numquam. Delectus consequuntur eius possimus alias praesentium qui officia? Optio ipsa praesentium consectetur quos dolorem tenetur laborum accusamus perspiciatis nesciunt cumque quae quam laboriosam nisi excepturi, exercitationem aspernatur quo voluptas? Officiis, sit sint! Rerum quos optio nostrum accusantium alias illo mollitia, ullam placeat aliquam ab similique id tempora corporis excepturi maxime iusto quas. Autem eaque ad quam ducimus veritatis asperiores cupiditate in, et aspernatur omnis facere nesciunt sit iusto esse.</p></article>
         </div>
+
     </main>
 
-    <footer>footer</footer>
+    <footer>
+        <ul class="footer_list">
+            <li><a class="footer_item" href="">Kontakta oss</a></li>
+            <li><a class="footer_item" href="">Retur</a></li>
+            <li><a class="footer_item" href="">Leverans</a></li> 
+         </ul>
+ 
+         <ul class="footer_list">
+             <li ><a class="footer_item"href="om_oss.html">Om oss</a></li>
+             <li><a class="footer_item" href="">Butiker</a></li>
+             <li><a class="footer_item" href="">COVID-19</a></li>
+         </ul>
+         
+         <ul class="footer_list">
+             <li><a class="footer_item" href="">Instagram</a></li>
+             <li><a class="footer_item" href="">Twitter</a></li>
+             <li><a class="footer_item" href="">Youtube</a></li>
+         </ul>
+    </footer>
 
 </div>
 
