--- a/vardagsrum.html
+++ b/vardagsrum.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="grid_wrapper">
-    <header><a href="index.html">header</a></header>
+    <header><a href="index.html"><img src="img/logo.png" alt=""></a></header>
     <nav>
         <ul class="meny_list">
             <li><a class="meny_item" href="katalog.html">Katalog</a></li>
 
-            <li><a class="meny_item" href="kundservice.html">kundservice</a></li>
+            <li><a class="meny_item" href="kundservice.html">Kundservice</a></li>
 
-            <li><a class="meny_item" href="om_oss.html">om oss</a></li>
+            <li><a class="meny_item" href="om_oss.html">Om oss</a></li>
 
         </ul>
 
@@ -30,20 +30,38 @@
     <main>
         <div class="inner_grid">
             <div class="inner_grid_produkter">
-                <section class="produkt_1">skooba
-                    <img src="img/vardagsrum_produkt_soffa.jfif" alt="">
+                <section class="produkt_1"><h2>Produkt 1</h2>
+                    <img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den">
                 </section>
-                <section class="produkt_2">dooba
-                    <img src="img/vardagsrum_produkt_soffa_2.jfif" alt="">
+                <section class="produkt_2"><h2>Produkt 2</h2>
+                    <img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En vit grå soffa med vit, gråa kuddar.">
                 </section>
-                <section class="produkt_3">booba
-                    <img src="img/vardagsrum_produkt_soffa_3.jfif" alt="">
+                <section class="produkt_3"><h2>Produkt 3</h2>
+                    <img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En svart soffa">
                 </section>
             </div>
         </div>
     </main>
 
-    <footer>footer</footer>
+    <footer>
+        <ul class="footer_list">
+            <li><a class="footer_item" href="">Kontakta oss</a></li>
+            <li><a class="footer_item" href="">Retur</a></li>
+            <li><a class="footer_item" href="">Leverans</a></li> 
+         </ul>
+ 
+         <ul class="footer_list">
+             <li ><a class="footer_item"href="om_oss.html">Om oss</a></li>
+             <li><a class="footer_item" href="">Butiker</a></li>
+             <li><a class="footer_item" href="">COVID-19</a></li>
+         </ul>
+         
+         <ul class="footer_list">
+             <li><a class="footer_item" href="">Instagram</a></li>
+             <li><a class="footer_item" href="">Twitter</a></li>
+             <li><a class="footer_item" href="">Youtube</a></li>
+         </ul>
+    </footer>
 
 </div>
 
