--- a/produkt.html
+++ b/produkt.html
@@ -27,19 +27,16 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main>
-        <div class="inner_grid">
-            <div class="inner_grid_produkter">
-                <section class="produkt_1">
-                    <a href="produkt.html"><h2>Produkt 1</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
-                </section>
-                <section class="produkt_2"><h2>Produkt 2</h2>
-                    <img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En vit grå soffa med vit, gråa kuddar.">
-                </section>
-                <section class="produkt_3"><h2>Produkt 3</h2>
-                    <img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En svart soffa">
-                </section>
-            </div>
+    <main >
+        <div class="grid_produkt_info">
+
+            <section id="produkt">
+                <img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den">
+            </section>
+            <section id="produkt_beskrivning">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi commodi reprehenderit similique, odio quos possimus ducimus doloremque magni animi assumenda modi unde! Ullam quam asperiores tempora iste quasi atque illum sint obcaecati voluptates dolores exercitationem soluta, consequatur esse architecto dicta debitis molestias deleniti recusandae at nesciunt. Placeat pariatur esse, eligendi dolores inventore accusantium amet corrupti ipsa sit aut at libero laborum consequuntur adipisci fugit blanditiis! Repellendus quasi voluptatum nemo in cupiditate quis dolorum accusamus, tempora dolore expedita? Cumque sit dicta odio praesentium, rem exercitationem quae inventore numquam! Natus beatae itaque harum libero eveniet et vero quo earum necessitatibus? Corrupti, ab.</p>
+            </section>
+
         </div>
     </main>
 
