--- a/katalog.html
+++ b/katalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laque - Katalog</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
                 <a href="vardagsrum.html"><h2>Vardagsrum</h2><img src="img/vardagsrum_meny.jpg" alt="En trä bord i mitten med två vit, bruna soffor, en åt vänster och en åt höger"></a>
             </section>
             <section id="kok">
-                <a href="kök.html"><h2>Kök</h2><img src="img/kök_meny_bild.jpg" alt="En diskbänk och en bord framför med en spis och andra köksredskap"></a>
+                <a href="kok.html"><h2>Kök</h2><img src="img/kok_meny_bild.jpg" alt="En diskbänk och en bord framför med en spis och andra köksredskap"></a>
             </section>
 
         </div>
