--- a/kok.html
+++ b/kok.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laque - Kök</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -27,16 +27,28 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main >
+    <main>
         <div class="inner_grid_produkter">
+            <!-- Vad ska jag kalla klasserna för kök menyn och när ska man använda  -->
+            <!-- Hur fungerar listor som inte är på nav-taggen -->
+            <div class="produkt_meny">
+                <ul class="produkt_list">
+                <li><a class="produkt_item" href=""></a>Köksutrustning</li>
+
+                <li><a class="produkt_item" href=""></a>Köksskåpsinredning</li>
+
+                <li><a class="produkt_item" href=""></a>Vitvaror</li>
+                </ul>
+            </div>
+
             <section class="produkt_1"><h2>Produkt 1</h2>
-                <img src="img/Kök_produkt.jpg" alt="En diskbänk åt vänster med två ungnar i mitten och ett bord åt höger">
+                <img src="img/kok_produkt.jpg" alt="En diskbänk åt vänster med två ungnar i mitten och ett bord åt höger">
             </section>
             <section class="produkt_2"><h2>Produkt 2</h2>
-                <img src="img/Kök_produkt_2.jpg" alt="En hylla för köksredskap eller tallrikar">
+                <img src="img/kok_produkt_2.jpg" alt="En hylla för köksredskap eller tallrikar">
             </section>
             <section class="produkt_3"><h2>Produkt 3</h2>
-                <img src="img/kök_produkt_3.jpg" alt="Ett bord med svart stolar runtom">
+                <img src="img/kok_produkt_3.jpg" alt="Ett bord med svart stolar runtom">
             </section>
         </div>
     </main>
