--- a/vardagsrum.html
+++ b/vardagsrum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laque - Vardagsrum</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,6 +30,14 @@
     <main>
         <div class="inner_grid">
             <div class="inner_grid_produkter">
+                <div class="produkt_meny">
+                    <ul class="produkt_list">
+                        <li><a class="produkt_item" href="">Köksutrustning</a></li>
+                        <li><a class="produkt_item" href="">Köksskåpsinredning</a></li>
+                        <li><a class="produkt_item" href="">Vitvaror</a></li>
+                    </ul>
+                </div>
+
                 <section class="produkt_1">
                     <a href="produkt.html"><h2>Produkt 1</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
                 </section>
